--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -15,12 +15,6 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <View
-                android:id="@+id/view2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="4dp" />
-
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -53,6 +47,7 @@
                 android:background="#E0E0E0" />
 
             <LinearLayout
+                android:id="@+id/addressLayout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -67,17 +62,28 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_marginEnd="8dp"
-                        android:src="@drawable/bg_address" />
+                        android:src="@drawable/baseline_location_pin_24" />
 
                     <TextView
                         android:id="@+id/addressTextView"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Không có địa chỉ"
+                        android:text="Vui lòng chọn địa chỉ"
                         android:textColor="@android:color/black"
+                        android:textStyle="bold"
                         android:textSize="16sp" />
                 </LinearLayout>
+
+                <TextView
+                    android:id="@+id/addressDetailTxt"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="32dp"
+                    android:layout_marginTop="4dp"
+                    android:text="Chi tiết địa chỉ..."
+                    android:textColor="@android:color/darker_gray"
+                    android:textSize="14sp" />
 
                 <Button
                     android:id="@+id/changeAddressButton"
@@ -86,19 +92,17 @@
                     android:layout_gravity="end"
                     android:layout_marginTop="10dp"
                     android:backgroundTint="@android:color/holo_orange_dark"
-                    android:text="Thay đổi địa chỉ"
+                    android:text="Thay đổi"
                     android:textColor="@android:color/white"
                     android:textSize="14sp" />
             </LinearLayout>
 
-            <!-- Đường phân cách mờ -->
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:alpha="0.5"
                 android:background="#E0E0E0" />
 
-            <!-- Tiêu đề "Danh sách sản phẩm" -->
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -108,15 +112,12 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <!-- RecyclerView thay cho danh sách sản phẩm tĩnh -->
-
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/recyclerViewProductList"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:orientation="vertical" />
-
 
             <View
                 android:layout_width="match_parent"
@@ -134,22 +135,12 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rateRecyclerView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingTop="12dp">
-
-                <!-- Thêm RecyclerView cho phương thức vận chuyển -->
-                <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/rateRecyclerView"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="12dp"
-                    android:orientation="vertical" />
-
-
-            </LinearLayout>
+                android:layout_marginTop="12dp"
+                android:orientation="vertical" />
 
 
             <View
@@ -169,24 +160,17 @@
                 android:textSize="18sp"
                 android:textStyle="bold" />
 
-            <LinearLayout
+            <RadioGroup
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical"
                 android:paddingTop="12dp">
-
-                <RadioGroup
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <RadioButton
-                        android:id="@+id/checkboxPaymentOnDelivery"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Thanh toán ngay khi nhận hàng"
-                        android:textColor="@android:color/black" />
-                </RadioGroup>
-            </LinearLayout>
+                <RadioButton
+                    android:id="@+id/checkboxPaymentOnDelivery"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Thanh toán ngay khi nhận hàng"
+                    android:textColor="@android:color/black" />
+            </RadioGroup>
 
             <View
                 android:layout_width="match_parent"
@@ -226,9 +210,8 @@
                     <TextView
                         android:id="@+id/price_in_real"
                         android:layout_width="wrap_content"
-                        android:layout_height="17dp"
+                        android:layout_height="wrap_content"
                         android:layout_gravity="end"
-                        android:text=""
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
                 </LinearLayout>
@@ -275,17 +258,10 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="end"
-                        android:text=""
                         android:textColor="@android:color/black"
                         android:textSize="16sp" />
                 </LinearLayout>
             </LinearLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:alpha="0.5"
-                android:background="#E0E0E0" />
         </LinearLayout>
     </ScrollView>
 
@@ -305,7 +281,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:layout_width="1dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Thành tiền: "
@@ -320,7 +296,6 @@
                 android:text="₫0"
                 android:textColor="@android:color/holo_red_dark"
                 android:textSize="16sp" />
-
         </LinearLayout>
 
         <Button
