--- a/app/src/main/res/layout/activity_address_update.xml
+++ b/app/src/main/res/layout/activity_address_update.xml
@@ -52,7 +52,8 @@
         android:background="@android:color/white"
         android:hint="Họ và tên"
         android:paddingTop="16dp"
-        android:paddingBottom="16dp" />
+        android:paddingBottom="16dp"
+        android:textColor="#000000" />
 
     <View
         android:layout_width="match_parent"
@@ -68,7 +69,8 @@
         android:hint="Số điện thoại"
         android:inputType="phone"
         android:paddingTop="16dp"
-        android:paddingBottom="16dp" />
+        android:paddingBottom="16dp"
+        android:textColor="#090909" />
 
     <TextView
         android:layout_width="match_parent"
@@ -91,7 +93,8 @@
             android:background="@android:color/white"
             android:hint="Tỉnh/Thành phố"
             android:paddingTop="16dp"
-            android:paddingBottom="16dp" />
+            android:paddingBottom="16dp"
+            android:textColor="#090909" />
 
         <View
             android:layout_width="match_parent"
@@ -106,7 +109,8 @@
             android:background="@android:color/white"
             android:hint="Quận/Huyện"
             android:paddingTop="16dp"
-            android:paddingBottom="16dp" />
+            android:paddingBottom="16dp"
+            android:textColor="#090909" />
         <View
             android:layout_width="match_parent"
             android:layout_height="3dp"
@@ -120,7 +124,8 @@
             android:background="@android:color/white"
             android:hint="Phường/Xã"
             android:paddingTop="16dp"
-            android:paddingBottom="16dp" />
+            android:paddingBottom="16dp"
+            android:textColor="#090909" />
     </LinearLayout>
 
     <TextView
