--- a/app/src/main/res/layout/view_holder_product.xml
+++ b/app/src/main/res/layout/view_holder_product.xml
@@ -129,6 +129,16 @@
                 android:background="@drawable/rectangle_button_border_red"
                 app:layout_constraintStart_toStartOf="@+id/txt_product_name"
                 app:layout_constraintTop_toBottomOf="@+id/txt_product_name" />
+
+            <TextView
+                android:id="@+id/tv_new_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginTop="4dp"
+                />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
