--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -94,4 +94,18 @@
     <color name="colorLightBlue">#BBDEFB</color>
     <color name="colorTextDark">#333333</color>
     <color name="colorTextLight">#FFFFFF</color>
+
+    <color name="primary_color">#FF6B35</color>
+    <color name="primary_variant">#E55A2B</color>
+    <color name="secondary_color">#03DAC6</color>
+    <color name="background_light">#FAFAFA</color>
+    <color name="surface_color">#FFFFFF</color>
+    <color name="on_primary_color">#FFFFFF</color>
+    <color name="on_secondary_color">#000000</color>
+    <color name="on_background_color">#000000</color>
+    <color name="on_surface_color">#000000</color>
+    <color name="on_surface_variant">#757575</color>
+    <color name="outline_color">#E0E0E0</color>
+    <color name="switch_thumb_color">@color/primary_color</color>
+    <color name="switch_track_color">@color/outline_color</color>
 </resources>
